添加了Sentense类，添加了to_file方法 添加了SoftConfig类，用于软件配置

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Presonal Private Files
 /manager/private_start.py
+# Personal Get Files
+*.mp3
 
+# Pycharm Setting Files
+.idea
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
